<resources>
    <string name="app_name">PROJMACC</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_create">Create</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_auth">Auth</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_credentials">Username or password are not valid</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_surname">Not a valid surname</string>
    <string name="invalid_bio">Bio must be less than 500 characters</string>
    <string name="invalid_birthday">Your birthday it\'s invalid</string>
    <string name="login_failed">"Login failed"</string>
    <string name="card_container">Login Card Container</string>
    <string name="back_to_login">Back to login</string>
    <string name="registration_failed">Register error</string>
    <string name="username">USERNAME</string>
    <string name="username_minuscolo">Username</string>
    <string name="password">PASSWORD</string>
    <string name="change_image_icon">Change image icon</string>
    <string name="insert_bio">Click here to insert your bio</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="n_s">N.S.</string>
    <string name="your_birthday">Your Birthday</string>
    <string name="register_button">Register button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_here_to_start_writing">Click here to start writing…</string>
    <string name="write_your_spot">Write your spot!</string>
    <string name="at_username">\@Username</string>
    <string name="spot_details">Spot Details</string>
    <string name="category">Category</string>
    <string name="when">When</string>
    <string name="where">Where</string>
    <string name="privacy">Privacy</string>
    <string name="show_my_name">Show my name</string>
    <string name="show_my_position">Show my position</string>
    <string name="card_layout">Card layout</string>
    <string name="current_position">Current Position</string>
    <string name="today">Today</string>
    <string name="remember_me">Remember me</string>
    <string name="like_button">Like button</string>
    <string name="save_spot_button">Save spot button</string>
    <string name="cancel_spot_button">Cancel spot button</string>
    <string name="spot_text">Spot Text</string>
    <string name="spot_location">Spot Location</string>
    <string name="spot_owner_sex">Spot owner sex</string>
    <string name="xx_years">xx years</string>
    <string name="zone_placeholder">Zone Placeholder</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_text_invalid">A valid text should be major than 10 character and minor than 500</string>
    <string name="create_error">Error publishing the spot</string>
    <string name="create_success">Your spot is online!</string>
    <string name="create_spot">Create spot</string>
    <string name="get_near_success">Successfully fetched near spots</string>
    <string name="get_near_error">Error fetching near spots</string>
    <string name="get_notifications_error">Error fetching notifications</string>
    <string name="get_notifications_success">Successfully fetched notifications</string>
    <string name="error_retrieving_location_token">Cannot retrieve location or token</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="bio_di_esempio">Bio di esempio</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="replies">Replies</string>
    <string name="spots">Spots</string>
    <string name="profilename">ProfileName</string>
    <string name="matches">Matches</string>
    <string name="realname">RealName</string>
    <string name="pictures">Pictures</string>
    <string name="real_name">Real Name</string>
    <string name="n">N</string>
    <string name="bio">Bio</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telegram">Telegram</string>
    <string name="facebook">Facebook</string>
    <string name="icona_facebook">Icona Facebook</string>
    <string name="icona_telegram">Icona Telegram</string>
    <string name="icona_instagram">Icona Instagram</string>
    <string name="icona_whatsapp">Icona Whatsapp</string>
    <string name="save_changes">Save Changes</string>
    <string name="or_lable">OR</string>
    <string name="retrieve_location">Retrieving last known position…</string>
    <string name="wip_label">This feature is work in progress!</string>
    <string name="insert_all_data">Insert all data before proceed</string>
    <string name="notification_channel_id">fcm_match_notification</string>
    <string name="notification_channel_name">Match</string>
    <string name="notification_channel_description">Channel for spot matches</string>
    <string name="fcm_token"></string>
    <string name="xx_km">xx km</string>
    <string name="confirm_password">Confirm password</string>
</resources>